Fix blog page spacing and formatting

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -38,6 +38,8 @@
 
   .read-more {
     font-size: 18px;
+    position: relative;
+    top: -20px;
   }
   h1 {
     padding-bottom: 0px;
@@ -57,7 +59,7 @@
 
 // Adds border to separate each entry
 .posts > .post {
-  padding-bottom: 2em;
+  padding-bottom: 1em;
   border-bottom: 1px solid $accentRed;
 }
 
@@ -82,18 +84,23 @@
   align-items: start;
   // Auto-scaling height for small screens
   height: fit-content;
-
+  width: 100%;
   // Hide excerpt image for small screens
-  p:has(img ~ em) {
+  p:has(img) {
     display: none;
-    align-self: center;
+    //align-self: center;
+    //justify-self: flex-end;
   }
 
-  p:first-of-type {
+  div:first-of-type {
+    p:first-of-type {
+      margin: 0px;
+    }
     width: 100%;
-    padding: 0px;
+
     margin: 5px 0px;
     margin-bottom: 10px;
+    justify-self: flex-start;
   }
 }
 
@@ -120,11 +127,14 @@
   }
 
   .excerpt {
-    height: 250px;
+    //height: 250px;
     // Add back image to blog page
-    p:has(img ~ em) {
+    p:has(img) {
+      position: relative;
+      top: -10px;
       display: block;
       font-size: 16px;
+      //justify-self: flex-end;
     }
     img {
       max-width: 250px;
@@ -133,7 +143,7 @@
     }
 
     // Makes space for image
-    p:first-of-type {
+    div:first-of-type {
       max-width: 550px;
       margin-right: 10px;
     }
@@ -147,7 +157,8 @@
 @media (min-width: 1024px) {
   .entry {
     // Float blog image to the right on larger screens
-    p:has(img ~ em) {
+    p:has(img) {
+      width: fit-content;
       float: right;
       margin-left: 20px;
       margin-bottom: 0px;
@@ -155,30 +166,32 @@
   }
   // Make image larger and excerpt height smaller
   .excerpt {
-    height: 180px;
+    //height: 180px;
     img {
       max-width: 325px;
     }
   }
   // Add more padding to bottom of excerpts
   .posts > .post {
-    padding-bottom: 3.5em;
+    padding-bottom: 0em;
+  }
+  .post {
+    .read-more {
+      top: -75px;
+    }
   }
 }
 @media (min-width: 1280px) {
   .excerpt {
     font-size: 26px;
-    p:first-of-type {
+    div:first-of-type {
       max-width: 1050px;
     }
   }
 }
 @media (min-width: 1536px) {
-  .excerpt {
-    height: 150px;
-  }
   .posts > .post {
-    padding-bottom: 4em;
+    padding-bottom: 0em;
     padding-top: 15px;
   }
 }
